checked more off the checklist

--- a/app/assets/stylesheets/pages/_inks_and_consumables.scss
+++ b/app/assets/stylesheets/pages/_inks_and_consumables.scss
@@ -112,7 +112,7 @@
 .inks-card-text {
   margin: 0;
   color: #717B8D;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: lighter;
   line-height: 20px;
 }
@@ -120,6 +120,7 @@
 .inks-card-header {
   margin: 10px 0;
   font-size: 14px;
+  font-weight: bold;
 }
 
 .inks-first-section-right {
