--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -3,7 +3,7 @@
   <%= cl_image_tag("inks_little_pill_pahv4x.png", class: "jobs-little-pill hide-mobile") %>
   <div class="jobs-section">
     <div class="container">
-      <h1 class="jobs-header mt-5" style="letter-spacing: 1px;"><%= t("jobs.title") %></h1>
+    <h1 class="jobs-header mt-5 responsive-header" style="letter-spacing: 1px;"><%= t("jobs.title") %></h1>
       <p class="jobs-header jobs-header-text main-body-text"><%= t("jobs.tagline") %></p>
       <div class="jobs-index-filter-button">
         <div id="show-filter" class="see-more-button jobs-index-filter-button">
