--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -10,8 +10,8 @@
   </div>
   <div class="ownership-second-section-wrapper">
     <%= image_tag 'ownership-icon-1.png', class: 'about-icon' %>
-    <h3 class="ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_title") %></h3>
-    <p class="paragraph-text ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_text") %></p>
+    <h2 class="ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_title") %></h2>
+    <p class="responsive-text-small ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_text") %></p>
   </div>
   <div class="ownership-third-section-wrapper">
     <%= cl_image_tag("ownership-slider_vuhnwc.png", :quality=>"auto", id: "ownership-slider", class: "ownership-slider hide-mobile") %>
