--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -1,7 +1,7 @@
 <div class="distributor-wrapper">
   <div class="first-section fxone-first-section-background mobile-column">
       <div class="first-section-text">
-        <h1 class=""><%= t("distributor.first_section_title") %></h1>
+        <h1 class="w-100"><%= t("distributor.first_section_title") %></h1>
         <p class="paragraph-text"><%= t("distributor.first_section_text") %></p>
         <%= image_tag 'about-dots.png', class: 'distributor-dots' %>
       </div>
@@ -11,7 +11,7 @@
   <div class="distributor-second-section-wrapper">
     <div class="container-countries">
       <div class="distributor-second-section">
-        <h3 class="mobile-margin-bottom"><%= t("distributor.second_section_title") %>:</h3>
+        <h2 class="mobile-margin-bottom"><%= t("distributor.second_section_title") %>:</h2>
         <div class="distributor-countries-container">
           <%#= render 'shared/distributor_countries' %>
           <div class="distributor-countries-web">
@@ -27,12 +27,12 @@
           <div class="distributor-countries-mobile">
             <div class="row" style="margin: 0;">
               <% @countries.each do |country| %>
-                <div class="country-card" style="width: 50%;">
+                <div class="country-card" style="width: 33.33%;">
                   <%= image_tag url_for(country.photo) %>
                   <p class="paragraph-text"><%= country.name %></p>
                 </div>
               <% end %>
-              <div class="country-card" style="width: 50%;">
+              <div class="country-card" style="width: 33.33%;">
                 <%= image_tag 'distributor-plus-icon.png' %>
                 <p class="paragraph-text"><%= t("distributor_countries.be_the_next") %></p>
               </div>
@@ -76,8 +76,8 @@
         </div>
         <div class="distributor-interested" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'distributor-icon-1.png', class: 'about-icon' %>
-          <h3><%= t("distributor.third_section_title") %></h3>
-          <p class="paragraph-text"><%= t("distributor.third_section_text") %></p>
+          <h2><%= t("distributor.third_section_title") %></h2>
+          <p class="responsive-text-small"><%= t("distributor.third_section_text") %></p>
         </div>
       </div>
     </div>
@@ -88,8 +88,8 @@
   </div>
   <div class="distributor-third-section-mobile-two">
     <div class="distributor-interested">
-      <h3><%= t("distributor.third_section_title") %></h3>
-      <p class="paragraph-text"><%= t("distributor.third_section_text") %></p>
+      <h2><%= t("distributor.third_section_title") %></h2>
+      <p class="responsive-text-small"><%= t("distributor.third_section_text") %></p>
     </div>
     <div class="distributor-contact-us-form">
       <%= simple_form_for :send_email, url: send_email_path, method: :get do |f| %>
