--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -4,13 +4,13 @@
   <div class="first-section fxone-first-section-background">
       <div class="first-section-text software-first-section-text">
         <div class="software-first-title">
-          <h3><%= t("software.first_section_title_one") %></h3>
-          <p class="paragraph-text no-margin-mobile p-0"><%= t("software.first_section_text_one") %></p>
+          <h1><%= t("software.first_section_title_one") %></h1>
+          <p class="responsive-text-small no-margin-mobile p-0"><%= t("software.first_section_text_one") %></p>
         </div>
         <%= cl_image_tag("software-graphic-1_ayt9zv.png", class: "first-section-image show-mobile software-graphic-mobile") %>
         <div>
-          <h3><%= t("software.first_section_title_two") %></h3>
-          <p class="paragraph-text p-0"><%= t("software.first_section_text_two") %></p>
+          <h1><%= t("software.first_section_title_two") %></h1>
+          <p class="responsive-text-small p-0"><%= t("software.first_section_text_two") %></p>
         </div>
       </div>
       <%= cl_image_tag("software-graphic-1_ayt9zv.png", class: "first-section-image hide-mobile") %>
@@ -22,33 +22,33 @@
       <div class="inks-section software-section">
         <div class="inks-first-section-left software-first-section-left software-check-display">
           <div>
-            <h3><%= t("software.second_section_title") %></h3>
-            <p class="paragraph-text"><%= t("software.second_section_text") %></p></p>
+            <h2><%= t("software.second_section_title") %></h2>
+            <p class="responsive-text-small"><%= t("software.second_section_text") %></p></p>
           </div>
           <div>
             <div class="fxone-sixth-section-check">
               <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_one") %></p>
+              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_one") %></p>
             </div>
             <div class="fxone-sixth-section-check">
               <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_two") %></p>
+              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_two") %></p>
             </div>
             <div class="fxone-sixth-section-check">
               <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_three") %></p>
+              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_three") %></p>
             </div>
             <div class="fxone-sixth-section-check">
               <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_four") %></p>
+              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_four") %></p>
             </div>
             <div class="fxone-sixth-section-check">
               <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_five") %></p>
+              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_five") %></p>
             </div>
             <div class="fxone-sixth-section-check">
               <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_six") %></p>
+              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_six") %></p>
             </div>
           </div>
         </div>
@@ -94,34 +94,34 @@
       <%= cl_image_tag("software-mobile-graphic-2_wpjolo.png", :quality=>"auto", class: "software-graphic-2 show-mobile software-graphic-side") %>
       <div class="fxone-fifth-section-content software-fifth-section-content">
           <div class="fxone-fifth-section-left">
-            <h3><%= t("software.third_section_left_title") %></h3>
-            <p class="bold small-text"><%= t("software.third_section_left_sub_title") %></p>
+            <h2><%= t("software.third_section_left_title") %></h2>
+            <p class="bold s-medium-text"><%= t("software.third_section_left_sub_title") %></p>
             <ul style="padding-left: 16px;">
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_left_text_one") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_left_text_two") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_left_text_three") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_left_text_four") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_left_text_five") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_left_text_six") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_left_text_seven") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_left_text_eight") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_one") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_two") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_three") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_four") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_five") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_six") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_seven") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_eight") %></li>
             </ul>
-            <p class="paragraph-text pl-3" style="font-size: 10px !important; line-height: 18px !important;"><%= t("software.third_section_left_text_nine") %></p>
+            <p class="s-medium-text grey-text pl-3" style="font-size: 12px !important; line-height: 18px !important;"><%= t("software.third_section_left_text_nine") %></p>
           </div>
           <div class="fxone-fifth-section-right software-fifth-section-right">
-            <h3><%= t("software.third_section_right_title") %></h3>
-            <p class="bold small-text"><%= t("software.third_section_right_sub_title") %></p>
+            <h2><%= t("software.third_section_right_title") %></h2>
+            <p class="bold s-medium-text"><%= t("software.third_section_right_sub_title") %></p>
             <ul style="padding-left: 16px;">
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_right_text_one") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_right_text_two") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_right_text_three") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_one") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_two") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_three") %></li>
             </ul>
-            <p class="bold small-text"><%= t("software.third_section_right_title_two") %></p>
+            <p class="bold s-medium-text"><%= t("software.third_section_right_title_two") %></p>
             <ul style="padding-left: 16px;">
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_right_text_four") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_right_text_five") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_right_text_six") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("software.third_section_right_text_seven") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_four") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_five") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_six") %></li>
+              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_seven") %></li>
             </ul>
           </div>
       </div>
@@ -131,7 +131,7 @@
             <%= cl_image_tag("software-graphic-3_l0wrfp.png", :quality=>"auto", class: "software-graphic about-graphic-two") %>
           </div>
           <div class="inks-first-section-right d-flex justify-content-center">
-            <p class="paragraph-text"><%= t("software.third_section_final_text") %></p>
+            <p class="responsive-text-small"><%= t("software.third_section_final_text") %></p>
           </div>
         </div>
       </div>
@@ -147,8 +147,8 @@
     <div class="container" style="position: relative;">
       <div class="software-fourth-section-text">
         <%= image_tag 'software-icon-1.png', class: 'about-icon' %>
-        <h3 class="text-center"><%= t("software.fourth_section_title_one") %></h3>
-        <p class="paragraph-text text-center"><%= t("software.fourth_section_text_one") %></p>
+        <h2 class="text-center"><%= t("software.fourth_section_title_one") %></h2>
+        <p class="responsive-text-small text-center"><%= t("software.fourth_section_text_one") %></p>
       </div>
       <div class="software-fourth-section-graphics-container">
         <%= cl_image_tag("software-graphic-4_weomrk.png", :quality=>"auto", class: "software-fourth-section-graphics") %>
@@ -156,8 +156,8 @@
       </div>
       <div class="software-fourth-section-text">
         <%= image_tag 'software-icon-2.png', class: 'about-icon' %>
-        <h3 class="text-center"><%= t("software.fourth_section_title_two") %></h3>
-        <p class="paragraph-text text-center"><%= t("software.fourth_section_text_two") %></p>
+        <h2 class="text-center"><%= t("software.fourth_section_title_two") %></h2>
+        <p class="responsive-text-small text-center"><%= t("software.fourth_section_text_two") %></p>
       </div>
       <div class="software-fourth-section-graphics-container">
         <%= cl_image_tag("software-graphic-6_x590cd.png", :quality=>"auto", class: "software-fourth-section-graphics") %>
@@ -166,8 +166,8 @@
       </div>
       <div class="software-fourth-section-text">
         <%= image_tag 'software-icon-3.png', class: 'about-icon' %>
-        <h3 class="text-center"><%= t("software.fourth_section_title_three") %></h3>
-        <p class="paragraph-text text-center"><%= t("software.fourth_section_text_three") %></p>
+        <h2 class="text-center"><%= t("software.fourth_section_title_three") %></h2>
+        <p class="responsive-text-small text-center"><%= t("software.fourth_section_text_three") %></p>
       </div>
       <div class="container">
         <div class="inks-section software-third-section-bottom mobile-column">
@@ -175,16 +175,16 @@
             <%= cl_image_tag("software-graphic-8_rmajqc.png", :quality=>"auto", class: "w-100 mobile-margin-bottom graphic-shadow") %>
           </div>
           <div class="inks-first-section-right mobile-center">
-            <h3><%= t("software.fourth_section_title_four") %></h3>
-            <p class="paragraph-text"><%= t("software.fourth_section_text_four") %></p>
+            <h2><%= t("software.fourth_section_title_four") %></h2>
+            <p class="responsive-text-small"><%= t("software.fourth_section_text_four") %></p>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="inks-section">
           <div class="about-fifth-section-left mobile-center">
-            <h3 style="padding-left: 16px;"><%= t("software.fourth_section_title_five") %></h3>
-            <p class="paragraph-text about-fifth-section-text" style="padding-left: 16px;"><%= t("software.fourth_section_text_five") %></p>
+            <h2 style="padding-left: 16px;"><%= t("software.fourth_section_title_five") %></h2>
+            <p class="responsive-text-small about-fifth-section-text" style="padding-left: 16px;"><%= t("software.fourth_section_text_five") %></p>
             <%#= link_to '#', class: 'btn software-button' do %>
              <!--  <div class="d-flex align-items-center">
                 <p><%#= t("software.button" ) %></p>
@@ -203,8 +203,8 @@
             <%= cl_image_tag("software-graphic-10_zfwsgt.png", :quality=>"auto", class: "w-100 mobile-margin-bottom graphic-shadow") %>
           </div>
           <div class="inks-first-section-right mobile-center">
-            <h3><%= t("software.fourth_section_title_six") %></h3>
-            <p class="paragraph-text"><%= t("software.fourth_section_text_six") %></p>
+            <h2><%= t("software.fourth_section_title_six") %></h2>
+            <p class="responsive-text-small"><%= t("software.fourth_section_text_six") %></p>
           </div>
         </div>
       </div>
@@ -214,11 +214,11 @@
     <div class="container">
       <div class="software-fourth-section-text no-padding-mobile">
         <%= image_tag 'software-icon-4.png', class: 'about-icon' %>
-        <h3 class="text-center"><%= t("software.fifth_section_title_one") %></h3>
-        <p class="paragraph-text text-center"><%= t("software.fifth_section_sub_title") %></p>
-        <p class="paragraph-text text-center mobile-margin-bottom"><%= t("software.fifth_section_text_one") %></p>
-        <h3 class="text-center"><%= t("software.fifth_section_title_two") %></h3>
-        <p class="paragraph-text text-center"><%= t("software.fifth_section_text_two") %></p>
+        <h2 class="text-center"><%= t("software.fifth_section_title_one") %></h2>
+        <p class="responsive-text-small text-center"><%= t("software.fifth_section_sub_title") %></p>
+        <p class="responsive-text-small text-center mobile-margin-bottom"><%= t("software.fifth_section_text_one") %></p>
+        <h2 class="text-center"><%= t("software.fifth_section_title_two") %></h2>
+        <p class="responsive-text-small text-center"><%= t("software.fifth_section_text_two") %></p>
         <%= cl_image_tag("software-graphic-11_c9knsk.png", :quality=>"auto", class: "software-middle-graphic") %>
       </div>
     </div>
