--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,7 +1,8 @@
 .post-card {
   width: 100%;
   background: transparent;
-  height: 100%;
+  height: 140px;
+  margin: 20px 0;
 
   & a {
     display: flex;
@@ -14,22 +15,13 @@
   }
 
   & img {
-    width: 30%;
-    height: auto;
+    width: 140px;
+    height: 140px;
     border-radius: 12px;
     object-fit: cover;
   }
 
   @include for-xlarge-devices-down {
-  }
-
-  @include for-large-devices-down {
-    & img {
-      width: 25%;
-      height: 100px;
-      border-radius: 12px;
-    }
-
   }
 
   @include for-medium-devices-down {
@@ -46,6 +38,7 @@
   }
 
   @include for-small-devices-down {
+    height: auto;
     & a {
       flex-direction: column-reverse;
     }
@@ -57,7 +50,6 @@
   }
 
   @include for-phone-only {
-
     & img {
       width: 100%;
       height: 200px;
@@ -88,10 +80,10 @@
   }
 
   @include for-xlarge-devices-down {
-    padding-right: 40px;
+    padding-right: 30px;
 
     & p:nth-child(2) {
-      padding: 20px 0;
+      padding: 10px 0;
     }
   }
 
