--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -323,6 +323,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.1);
 }
 
 .about-form {
