--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -1,12 +1,15 @@
 .faq-card {
-  width: 80%;
+  width: 90%;
   padding: 10px 20px;
   background-color: #fff;
-  border-radius: 4px;
+  border-radius: 2px;
   box-shadow: 2px 2px 20px rgba(0,0,0,0.1);
-  margin: 20px 0;
+  margin: 20px auto;
   position: relative;
   z-index: 2;
+  @include for-phone-only {
+    width: 100%;
+  }
 }
 
 .faq-card-head {
@@ -14,36 +17,49 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  min-height: 50px;
   cursor: pointer;
   position: relative;
   z-index: 2;
+  padding-right: 40px;
 }
 
 .faq-card-body {
   width: 100%;
-  height: 0px;
+  max-height: 0px;
   overflow: hidden;
   padding-top: 0px;
-  transition: 1s;
+  border-top: 1.5px solid transparent;
+  transition: 0.5s ease;
 }
 
 .italic {
   font-style: italic;
 }
-.yellow-arrow {
+
+.arrow-box {
+  height: 25px;
+  width: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #FCEFDA;
-  color: #F4B75E;
-  padding: 5px;
   border-radius: 50px;
+  position: absolute;
+  right: 0;
+}
+.yellow-arrow {
+  color: #F4B75E;
+  padding-top: 2px;
   font-size: 16px;
 }
 
 .faq-card-open {
-  border-top: 1px solid gray;
-  height: 140px;
+  border-top: 1.5px solid rgba(0,0,0,0.1);
+  max-height: 500px;
+  overflow: scroll;
   padding-top: 20px;
-  padding-bottom: 20px;
+  margin-top: 5px;
 }
 
 .faq-page {
