--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -221,7 +221,7 @@
   position: absolute;
   bottom: -40px;
   left: -30px;
-  z-index: 1;
+  z-index: -1;
 }
 
 .fxone-seventh-section-dots {
@@ -258,8 +258,29 @@
 }
 
 .responsive-header {
+  font-size: 50px;
   @include for-small-devices-down {
-    font-size: 28px;
+    font-size: 35px;
+  }
+}
+
+.responsive-text {
+  font-size: 20px;
+  font-weight: lighter;
+  line-height: 30px;
+  color: #717B8D;
+  @include for-small-devices-down {
+    font-size: 16px;
+  }
+}
+
+.responsive-text-small {
+  font-size: 16px;
+  font-weight: lighter;
+  line-height: 30px;
+  color: #717B8D;
+  @include for-small-devices-down {
+    font-size: 14px;
   }
 }
 
@@ -309,22 +330,22 @@
 }
 
 .fxone-logo {
-  height: 40px;
-  padding-bottom: 8px;
+  height: 50px;
+  padding-bottom: 11px;
   padding-right: 5px;
-  @include for-small-devices-down {
-    height: 28px;
-    padding-bottom: 6px;
+  @include for-phone-only {
+    height: 34px;
+    padding-bottom: 7px;
   }
 }
 
 .fxone-logo-right {
-  height: 40px;
-  padding-bottom: 8px;
+  height: 50px;
+  padding-bottom: 11px;
   padding-left: 5px;
-  @include for-small-devices-down {
-    height: 28px;
-    padding-bottom: 6px;
+  @include for-phone-only {
+    height: 34px;
+    padding-bottom: 7px;
   }
 }
 
