--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -115,22 +115,21 @@
 }
 
 .first-section-text {
-  width: 500px;
+  width: 600px;
   position: relative;
   z-index: 10;
   padding: 20px;
 
   & h1 {
     color: #0D1B26;
+    font-size: 50px;
   }
-
-
 
   & p {
     padding-top: 20px;
     color: #747B8A;
     font-weight: 300;
-    font-size: 21px;
+    font-size: 20px;
   }
 
   @include for-phone-only {
@@ -231,7 +230,7 @@
 .second-section-two {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 200px;
+  grid-column-gap: 80px;
   margin-top: 100px;
   position: relative;
     z-index: 10;
@@ -285,7 +284,7 @@
   & img {
     height: 30px;
     width: 30px;
-    margin: 10px 20px;
+    margin: 10px 20px 10px 0;
   }
 
   & li {
@@ -705,8 +704,11 @@
     color: #7D8390;
     line-height: 35px;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 20px;
     padding-bottom: 40px;
+    @include for-small-devices-down {
+      font-size: 16px;
+    }
   }
 
   @include for-medium-devices-down {
