--- a/app/views/pages/fxone_plus.html.erb
+++ b/app/views/pages/fxone_plus.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag 'about-dots.png', class: 'fxone-plus-dots hide-mobile' %>
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-plus-little-pill hide-mobile") %>
       <div class="first-section-text">
-        <h1 class="responsive-header"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_plus.first_section_title") %></h1>
+        <h1 class="w-100"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_plus.first_section_title") %></h1>
         <p class="paragraph-text inks-card-text"><%= t("fxone_plus.first_section_text") %></p>
       </div>
       <div class="no-padding-mobile first-section-image" style="position: relative;">
