--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -4,14 +4,14 @@
   <div class="first-section fxone-first-section-background">
     <%= cl_image_tag("fxone-remote-graphic-1_rq5ho4.png", class: "first-section-image") %>
     <div class="first-section-text">
-      <h1 class="responsive-header"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_remote.first_section_title") %></h1>
+      <h1 class="w-100"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_remote.first_section_title") %></h1>
       <p class="paragraph-text"><%= t("fxone_remote.first_section_text") %></p>
     </div>
   </div>
   <div class="ownership-second-section-wrapper fxone-second-section-wrapper">
     <%= image_tag 'about-dots.png', class: 'fxone-dots hide-mobile' %>
     <%= image_tag 'fxone-icon-1.png', class: 'about-icon' %>
-    <h3 class="text-center"><%= t("fxone_remote.second_section_title") %></h3>
+    <h2 class="text-center"><%= t("fxone_remote.second_section_title") %></h2>
   </div>
   <div class="fxone-third-section-wrapper">
     <div class="container">
@@ -114,7 +114,7 @@
     <div class="container">
       <div class="fxone-fourth-section-header">
         <%= image_tag 'fxone-icon-2.png', class: 'about-icon' %>
-        <h3 class="text-center"><%= t("fxone_remote.fourth_section_title") %></h3>
+        <h2 class="text-center"><%= t("fxone_remote.fourth_section_title") %></h2>
       </div>
       <div class="about-section fxone-section mobile-column">
         <div class="about-first-section-left no-padding-mobile">
@@ -136,43 +136,43 @@
           <div class="fxone-fifth-section-left">
             <p class="bold small-text"><%= t("fxone_remote.fifth_section_left_title") %></p>
             <ul style="padding-left: 16px;">
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_one") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_two") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_three") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_four") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_five") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_six") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_seven") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_eight") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_nine") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_ten") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_eleven") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_twelve") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_thirteen") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_fourteen") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_one") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_two") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_three") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_four") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_five") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_six") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_seven") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_eight") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_nine") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_ten") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_eleven") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_twelve") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_thirteen") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_fourteen") %></li>
             </ul>
           </div>
           <div class="fxone-fifth-section-right">
             <p class="bold small-text"><%= t("fxone_remote.fifth_section_right_title_one") %></p>
             <ul style="padding-left: 16px;">
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_one") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_two") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_three") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_four") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_five") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_six") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_one") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_two") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_three") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_four") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_five") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_six") %></li>
             </ul>
             <p class="bold small-text"><%= t("fxone_remote.fifth_section_right_title_two") %></p>
             <ul style="padding-left: 16px;">
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_seven") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_eight") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_nine") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_ten") %></li>
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_eleven") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_seven") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_eight") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_nine") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_ten") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_eleven") %></li>
             </ul>
             <p class="bold small-text"><%= t("fxone_remote.fifth_section_right_title_three") %></p>
             <ul style="padding-left: 16px;">
-              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_twelve") %></li>
+              <li class="paragraph-text" style="line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_twelve") %></li>
             </ul>
           </div>
         </div>
@@ -184,36 +184,36 @@
     <div class="container">
       <div class="fxone-sixth-section-header">
         <%= image_tag 'fxone-icon-3.png', class: 'about-icon' %>
-        <h3 class="fxone-remote-sixth-section-title text-center"><%= t("fxone_remote.sixth_section_title") %></h3>
+        <h2 class="fxone-remote-sixth-section-title text-center"><%= t("fxone_remote.sixth_section_title") %></h2>
       </div>
       <div class="about-section fxone-section fxone-sixth-section-content">
         <div class="about-first-section-left">
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_one") %></p>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_one") %></p>
+              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_one") %></p>
+              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_one") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_two") %></p>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_two") %></p>
+              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_two") %></p>
+              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_two") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_three") %></p>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_three") %></p>
+              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_three") %></p>
+              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_three") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_four") %></p>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_four") %></p>
+              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_four") %></p>
+              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_four") %></p>
             </div>
           </div>
         </div>
@@ -221,29 +221,29 @@
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_one") %></p>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_one") %></p>
+              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_one") %></p>
+              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_one") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_two") %></p>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_two") %></p>
+              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_two") %></p>
+              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_two") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_three") %></p>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_three") %></p>
+              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_three") %></p>
+              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_three") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_four") %></p>
-              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_four") %></p>
+              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_four") %></p>
+              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_four") %></p>
             </div>
           </div>
         </div>
@@ -257,8 +257,8 @@
       <div class="about-section">
         <div class="about-fifth-section-left mobile-center fxone-no-padding">
           <%= image_tag 'fxone-icon-4.png', class: 'about-icon' %>
-          <h3 class="about-fifth-section-text" style="padding-left: 16px;"><%= t("fxone_remote.seventh_section_title") %></h3>
-          <p class="paragraph-text about-fifth-section-text" style="padding-left: 16px;"><%= t("fxone_remote.seventh_section_text") %></p>
+          <h2 class="about-fifth-section-text"><%= t("fxone_remote.seventh_section_title") %></h2>
+          <p class="responsive-text-small about-fifth-section-text"><%= t("fxone_remote.seventh_section_text") %></p>
           <%= cl_image_tag("fxone-remote-graphic-4_lo5sz0.png", :quality=>"auto", class: "about-graphic about-graphic-two show-mobile") %>
         </div>
         <div class="about-fifth-section-right">
