--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "news-pill") %>
   <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "news-pill-bottom") %>
   <div class="post-show-container">
-    <h1><%= @post.title %></h1>
+    <h1 class="responsive-header"><%= @post.title %></h1>
     <p>Reading time: <%= @post.reading_time %> mins</p>
     <%= cl_image_tag @post.image %>
     <div class="post-show-details">
